update: example.env

--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,12 @@
-DB_HOST=db
-DB_PORT=5432
-DB_USER=postgres
+#Postgres Configuration
+DB_HOST=abc
+DB_PORT=abc
+DB_USER=abc
 DB_PASSWORD=abc
 DB_NAME=abc
+
+# Redis Configuration
+REDIS_HOST=abc   
+REDIS_PORT=abc        
+REDIS_PASSWORD=abc     
+REDIS_DB=abc             
