--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,39 +5,5 @@ services:
     build: .
     ports:
       - "8080:8080"
-    depends_on:
-      - db
-      - redis
     env_file:
-      - .env
-
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=your_password
-      - POSTGRES_DB=your_database
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  redis:
-    image: redis:6
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: redis-server --appendonly yes
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-volumes:
-  postgres_data:
-  redis_data:
+      - .env  # Environment variables for your external databases
