--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,41 @@
-# nginx.conf
-events {}
+worker_processes auto;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    upstream golang_backend {
-        server app:8080;  # Your Golang app running inside the Docker container
-    }
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+    error_log   /var/log/nginx/error.log  debug;
+
+    sendfile        on;
+    keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen       80;
+        server_name  localhost;
 
         location / {
-            proxy_pass http://golang_backend;
+            proxy_pass http://172.29.0.2:8080;  # This is your app's IP address
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-        }
 
-        # Optional performance optimizations:
-        gzip on;
-        gzip_types text/plain application/json;
-        gzip_proxied any;
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+        }
     }
 }
