--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,17 +13,17 @@ http {
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
-    error_log   /var/log/nginx/error.log  debug;
+    error_log   /var/log/nginx/error.log  debug;  # Changed to debug for more detailed logs
 
     sendfile        on;
     keepalive_timeout  65;
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  localhost:8080;
 
         location / {
-            proxy_pass http://172.29.0.2:8080;  # This is your app's IP address
+            proxy_pass http://localhost:8080;  # Replace with your app's actual IP address
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -33,6 +33,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
+            # Add timeout settings
             proxy_connect_timeout 60s;
             proxy_send_timeout 60s;
             proxy_read_timeout 60s;
